syntax = "proto3";

import "Common.proto";

package wealth;

option csharp_namespace = "Wealth.InstrumentManagement";

service InstrumentsService {
  rpc GetInstrument (GetInstrumentRequest) returns (GetInstrumentResponse);
  rpc CreateStock (CreateStockRequest) returns (CreateStockResponse);
  rpc CreateBond (CreateBondRequest) returns (CreateBondResponse);
  rpc ChangePrice (ChangePriceRequest) returns (ChangePriceResponse);
}

message GetInstrumentRequest {
  InstrumentIdProto id = 1;
}

message GetInstrumentResponse {
  InstrumentIdProto id = 1;
  InstrumentTypeProto type = 2;
  string name = 3;
  MoneyProto price = 4;
  ISINProto isin = 5;
  oneof instrument {
    StockInstrumentProto stock_info = 17;
    BondInstrumentProto bond_info = 18;
  }
}

message CreateStockRequest {
  string name = 1;
  ISINProto isin = 2;
}

message CreateStockResponse {
  InstrumentIdProto id = 1;
}

message CreateBondRequest {
  string name = 1;
  ISINProto isin = 2;
}

message CreateBondResponse {
  InstrumentIdProto id = 1;
}

message StockInstrumentProto {
  int32 lot_size = 4;
  MoneyProto dividend_per_year = 5;
}

message BondInstrumentProto {
}

message ChangePriceRequest {
  InstrumentIdProto id = 1;
  MoneyProto price = 2;
}

message ChangePriceResponse {
}